--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/ivUserSettingAvatar"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
+        android:layout_width="158dp"
+        android:layout_height="159dp"
         android:layout_marginStart="104dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="107dp"
@@ -43,11 +43,11 @@
         android:layout_height="200dp"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginBottom="110dp"
+        android:layout_marginBottom="164dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
@@ -67,7 +67,15 @@
             android:layout_width="260dp"
             android:layout_height="60dp"
             android:text="@string/btn_logout_message" />
+
     </LinearLayout>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
